objects/vlocity_cmt__ItemImplementation__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <description>The globally unique identifier of the Product. Used to identify the product across Salesforce instances.</description>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Implementation__c</fullName>
        <label>Implementation</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ThorImplementation__c</fullName>
        <label>Thor Implementation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Item Implementation</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Item Implementation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Item Implementations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>